Refactor StudentApplication class; update GUI components and layout, add report and clear functionality, and improve data handling for student, project, and score management.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,534 +2,9 @@
     "configurations": [
         {
             "type": "java",
-            "name": "ex1",
+            "name": "StudentApplication",
             "request": "launch",
-            "mainClass": "chapter9.ex1",
-            "projectName": "java_in_class_63e39e38"
-        },
-        {
-            "type": "java",
-            "name": "RegisterApplication",
-            "request": "launch",
-            "mainClass": "chapter10.New.RegisterApplication",
-            "projectName": "java_in_class_63e39e38"
-        },
-        {
-            "type": "java",
-            "name": "RegisterApplication",
-            "request": "launch",
-            "mainClass": "chapter10.New.RegisterApplication",
-            "projectName": "java_in_class_fa9d375a"
-        },
-        {
-            "type": "java",
-            "name": "ex11",
-            "request": "launch",
-            "mainClass": "chapter9.New.ex11",
-            "projectName": "java_in_class_fa9d375a"
-        },
-        {
-            "type": "java",
-            "name": "ex8",
-            "request": "launch",
-            "mainClass": "chapter9.New.ex8",
-            "projectName": "java_in_class_63e39e38"
-        },
-        {
-            "type": "java",
-            "name": "ex6",
-            "request": "launch",
-            "mainClass": "chapter9.New.ex6",
-            "projectName": "java_in_class_63e39e38"
-        },
-        {
-            "type": "java",
-            "name": "ex4",
-            "request": "launch",
-            "mainClass": "chapter9.New.ex4",
-            "projectName": "java_in_class_63e39e38"
-        },
-        {
-            "type": "java",
-            "name": "ex4",
-            "request": "launch",
-            "mainClass": "chapter9.New.ex4",
-            "projectName": "java_in_class_fa9d375a"
-        },
-        {
-            "type": "java",
-            "name": "ex3",
-            "request": "launch",
-            "mainClass": "chapter9.New.ex3",
-            "projectName": "java_in_class_fa9d375a"
-        },
-        {
-            "type": "java",
-            "name": "ex3",
-            "request": "launch",
-            "mainClass": "chapter9.New.ex3",
-            "projectName": "java_in_class_1eec5f7e"
-        },
-        {
-            "type": "java",
-            "name": "ex2",
-            "request": "launch",
-            "mainClass": "chapter9.New.ex2",
-            "projectName": "java_in_class_1eec5f7e"
-        },
-        {
-            "type": "java",
-            "name": "ex1",
-            "request": "launch",
-            "mainClass": "chapter9.New.ex1",
-            "projectName": "java_in_class_1eec5f7e"
-        },
-        {
-            "type": "java",
-            "name": "App",
-            "request": "launch",
-            "mainClass": "chapter8.New.App",
-            "projectName": "java_in_class_1eec5f7e"
-        },
-        {
-            "type": "java",
-            "name": "App",
-            "request": "launch",
-            "mainClass": "chapter7.New.App",
-            "projectName": "java_in_class_1eec5f7e"
-        },
-        {
-            "type": "java",
-            "name": "App",
-            "request": "launch",
-            "mainClass": "chapter7.New.App",
-            "projectName": "java_in_class_9f6bbd82"
-        },
-        {
-            "type": "java",
-            "name": "Assign05_6806021612037",
-            "request": "launch",
-            "mainClass": "chapter6.New.Assign05_6806021612037",
-            "projectName": "java_in_class_9f6bbd82"
-        },
-        {
-            "type": "java",
-            "name": "ex10",
-            "request": "launch",
-            "mainClass": "chapter6.New.ex10",
-            "projectName": "java_in_class_9f6bbd82"
-        },
-        {
-            "type": "java",
-            "name": "ex9",
-            "request": "launch",
-            "mainClass": "chapter6.New.ex9",
-            "projectName": "java_in_class_9f6bbd82"
-        },
-        {
-            "type": "java",
-            "name": "CalculateExponents",
-            "request": "launch",
-            "mainClass": "test_sbt.CalculateExponents",
-            "projectName": "java_in_class_fa9d375a"
-        },
-        {
-            "type": "java",
-            "name": "ex8",
-            "request": "launch",
-            "mainClass": "chapter6.New.ex8",
-            "projectName": "java_in_class_fa9d375a"
-        },
-        {
-            "type": "java",
-            "name": "Fibonacci_Program",
-            "request": "launch",
-            "mainClass": "chapter6.New.Fibonacci_Program",
-            "projectName": "java_in_class_fa9d375a"
-        },
-        {
-            "type": "java",
-            "name": "Gpa_6806021612036",
-            "request": "launch",
-            "mainClass": "Midterm.Gpa_6806021612036",
-            "projectName": "java_in_class_63e39e38"
-        },
-        {
-            "type": "java",
-            "name": "ex6",
-            "request": "launch",
-            "mainClass": "chapter6.New.ex6",
-            "projectName": "java_in_class_9f6bbd82"
-        },
-        {
-            "type": "java",
-            "name": "test_mid",
-            "request": "launch",
-            "mainClass": "test_sbt.test.test_mid",
-            "projectName": "java_in_class_9f6bbd82"
-        },
-        {
-            "type": "java",
-            "name": "ex5",
-            "request": "launch",
-            "mainClass": "chapter6.New.ex5",
-            "projectName": "java_in_class_9f6bbd82"
-        },
-        {
-            "type": "java",
-            "name": "exercise3",
-            "request": "launch",
-            "mainClass": "chapter7.exercise3.exercise3",
-            "projectName": "java_in_class_9f6bbd82"
-        },
-        {
-            "type": "java",
-            "name": "ex4",
-            "request": "launch",
-            "mainClass": "chapter6.New.ex4",
-            "projectName": "java_in_class_9f6bbd82"
-        },
-        {
-            "type": "java",
-            "name": "ex3",
-            "request": "launch",
-            "mainClass": "chapter6.New.ex3",
-            "projectName": "java_in_class_9f6bbd82"
-        },
-        {
-            "type": "java",
-            "name": "ex2",
-            "request": "launch",
-            "mainClass": "chapter6.New.ex2",
-            "projectName": "java_in_class_9f6bbd82"
-        },
-        {
-            "type": "java",
-            "name": "ex1",
-            "request": "launch",
-            "mainClass": "chapter6.New.ex1",
-            "projectName": "java_in_class_9f6bbd82"
-        },
-        {
-            "type": "java",
-            "name": "Triangle",
-            "request": "launch",
-            "mainClass": "test_sbt.test_old_ass.com.Triangle",
-            "projectName": "java_in_class_63e39e38"
-        },
-        {
-            "type": "java",
-            "name": "test",
-            "request": "launch",
-            "mainClass": "project.test",
-            "projectName": "java_in_class_63e39e38"
-        },
-        {
-            "type": "java",
-            "name": "ex3",
-            "request": "launch",
-            "mainClass": "chapter5.ex3",
-            "projectName": "java_in_class_63e39e38"
-        },
-        {
-            "type": "java",
-            "name": "ex6",
-            "request": "launch",
-            "mainClass": "chapter5.ex6",
-            "projectName": "java_in_class_63e39e38"
-        },
-        {
-            "type": "java",
-            "name": "ex7",
-            "request": "launch",
-            "mainClass": "chapter5.ex7",
-            "projectName": "java_in_class_63e39e38"
-        },
-        {
-            "type": "java",
-            "name": "Ass3_04",
-            "request": "launch",
-            "mainClass": "Ass3.Ass3_04",
-            "projectName": "java_in_class_63e39e38"
-        },
-        {
-            "type": "java",
-            "name": "ex11",
-            "request": "launch",
-            "mainClass": "chapter4.ex11",
-            "projectName": "java_in_class_63e39e38"
-        },
-        {
-            "type": "java",
-            "name": "Ass3_02",
-            "request": "launch",
-            "mainClass": "Ass3.Ass3_02",
-            "projectName": "java_in_class_63e39e38"
-        },
-        {
-            "type": "java",
-            "name": "Ass3_03",
-            "request": "launch",
-            "mainClass": "Ass3.Ass3_03",
-            "projectName": "java_in_class_63e39e38"
-        },
-        {
-            "type": "java",
-            "name": "Ass2_04",
-            "request": "launch",
-            "mainClass": "Ass2.Ass2_04",
-            "projectName": "java_in_class_63e39e38"
-        },
-        {
-            "type": "java",
-            "name": "Ass2_03",
-            "request": "launch",
-            "mainClass": "Ass2.Ass2_03",
-            "projectName": "java_in_class_63e39e38"
-        },
-        {
-            "type": "java",
-            "name": "Ass2_02",
-            "request": "launch",
-            "mainClass": "Ass2.Ass2_02",
-            "projectName": "java_in_class_63e39e38"
-        },
-        {
-            "type": "java",
-            "name": "Ass2_01",
-            "request": "launch",
-            "mainClass": "Ass2.Ass2_01",
-            "projectName": "java_in_class_63e39e38"
-        },
-        {
-            "type": "java",
-            "name": "ass3_03",
-            "request": "launch",
-            "mainClass": "test_sbt.test_old_ass.ass3.ass3_03",
-            "projectName": "java_in_class_63e39e38"
-        },
-        {
-            "type": "java",
-            "name": "ass3_02",
-            "request": "launch",
-            "mainClass": "test_sbt.test_old_ass.ass3.ass3_02",
-            "projectName": "java_in_class_63e39e38"
-        },
-        {
-            "type": "java",
-            "name": "ass3_01",
-            "request": "launch",
-            "mainClass": "test_sbt.test_old_ass.ass3.ass3_01",
-            "projectName": "java_in_class_63e39e38"
-        },
-        {
-            "type": "java",
-            "name": "ass2_04",
-            "request": "launch",
-            "mainClass": "test_sbt.test_old_ass.ass2_04",
-            "projectName": "java_in_class_63e39e38"
-        },
-        {
-            "type": "java",
-            "name": "ass2_03",
-            "request": "launch",
-            "mainClass": "test_sbt.test_old_ass.ass2_03",
-            "projectName": "java_in_class_63e39e38"
-        },
-        {
-            "type": "java",
-            "name": "ass2_02",
-            "request": "launch",
-            "mainClass": "test_sbt.test_old_ass.ass2_02",
-            "projectName": "java_in_class_63e39e38"
-        },
-        {
-            "type": "java",
-            "name": "ass2_01",
-            "request": "launch",
-            "mainClass": "test_sbt.test_old_ass.ass2_01",
-            "projectName": "java_in_class_63e39e38"
-        },
-        {
-            "type": "java",
-            "name": "Car_Installment",
-            "request": "launch",
-            "mainClass": "chapter5.text_ex2.Car_Installment",
-            "projectName": "java_in_class_1e51a8b7"
-        },
-        {
-            "type": "java",
-            "name": "Car_Installmenti",
-            "request": "launch",
-            "mainClass": "chapter5.text_ex2.Car_Installmenti",
-            "projectName": "java_in_class_1e51a8b7"
-        },
-        {
-            "type": "java",
-            "name": "ex10",
-            "request": "launch",
-            "mainClass": "chapter5.ex10",
-            "projectName": "java_in_class_1e51a8b7"
-        },
-        {
-            "type": "java",
-            "name": "ex11",
-            "request": "launch",
-            "mainClass": "chapter5.New.ex11",
-            "projectName": "java_in_class_1e51a8b7"
-        },
-        {
-            "type": "java",
-            "name": "ex9",
-            "request": "launch",
-            "mainClass": "chapter5.New.ex9",
-            "projectName": "java_in_class_1e51a8b7"
-        },
-        {
-            "type": "java",
-            "name": "ex8",
-            "request": "launch",
-            "mainClass": "chapter5.New.ex8",
-            "projectName": "java_in_class_1e51a8b7"
-        },
-        {
-            "type": "java",
-            "name": "ex7",
-            "request": "launch",
-            "mainClass": "chapter5.New.ex7",
-            "projectName": "java_in_class_1e51a8b7"
-        },
-        {
-            "type": "java",
-            "name": "ex6",
-            "request": "launch",
-            "mainClass": "chapter5.New.ex6",
-            "projectName": "java_in_class_1e51a8b7"
-        },
-        {
-            "type": "java",
-            "name": "ex10",
-            "request": "launch",
-            "mainClass": "chapter5.ex10",
-            "projectName": "java_in_class_63e39e38"
-        },
-        {
-            "type": "java",
-            "name": "Car_Installment",
-            "request": "launch",
-            "mainClass": "chapter5.test_ex.Car_Installment",
-            "projectName": "java_in_class_63e39e38"
-        },
-        {
-            "type": "java",
-            "name": "PrimeNumber",
-            "request": "launch",
-            "mainClass": "test_sbt.PrimeNumber",
-            "projectName": "java_in_class_63e39e38"
-        },
-        {
-            "type": "java",
-            "name": "ex5",
-            "request": "launch",
-            "mainClass": "chapter5.New.ex5",
-            "projectName": "java_in_class_1e51a8b7"
-        },
-        {
-            "type": "java",
-            "name": "ex4",
-            "request": "launch",
-            "mainClass": "chapter5.New.ex4",
-            "projectName": "java_in_class_1e51a8b7"
-        },
-        {
-            "type": "java",
-            "name": "test",
-            "request": "launch",
-            "mainClass": "chapter5.New.test",
-            "projectName": "java_in_class_1e51a8b7"
-        },
-        {
-            "type": "java",
-            "name": "ex3",
-            "request": "launch",
-            "mainClass": "chapter5.New.ex3",
-            "projectName": "java_in_class_1e51a8b7"
-        },
-        {
-            "type": "java",
-            "name": "ex2",
-            "request": "launch",
-            "mainClass": "chapter5.New.ex2",
-            "projectName": "java_in_class_1e51a8b7"
-        },
-        {
-            "type": "java",
-            "name": "ex1",
-            "request": "launch",
-            "mainClass": "chapter5.New.ex1",
-            "projectName": "java_in_class_1e51a8b7"
-        },
-        {
-            "type": "java",
-            "name": "Employee",
-            "request": "launch",
-            "mainClass": "test_sbt.Employee",
-            "projectName": "java_in_class_1e51a8b7"
-        },
-        {
-            "type": "java",
-            "name": "exp3",
-            "request": "launch",
-            "mainClass": "chapter4.New.exp3",
-            "projectName": "java_in_class_1e51a8b7"
-        },
-        {
-            "type": "java",
-            "name": "PrimeNumber",
-            "request": "launch",
-            "mainClass": "test_sbt.PrimeNumber",
-            "projectName": "java_in_class_1e51a8b7"
-        },
-        {
-            "type": "java",
-            "name": "ex8",
-            "request": "launch",
-            "mainClass": "chapter4.New.ex8",
-            "projectName": "java_in_class_1e51a8b7"
-        },
-        {
-            "type": "java",
-            "name": "ex7",
-            "request": "launch",
-            "mainClass": "chapter4.New.ex7",
-            "projectName": "java_in_class_1e51a8b7"
-        },
-        {
-            "type": "java",
-            "name": "ex6",
-            "request": "launch",
-            "mainClass": "chapter4.New.ex6",
-            "projectName": "java_in_class_1e51a8b7"
-        },
-        {
-            "type": "java",
-            "name": "PrimeNumber",
-            "request": "launch",
-            "mainClass": "test_sbt.PrimeNumber",
-            "projectName": "java_in_class_fa9d375a"
-        },
-        {
-            "type": "java",
-            "name": "Employee",
-            "request": "launch",
-            "mainClass": "test_sbt.Employee",
-            "projectName": "java_in_class_fa9d375a"
-        },
-        {
-            "type": "java",
-            "name": "test_sbt",
-            "request": "launch",
-            "mainClass": "test_sbt.test.test_sbt",
+            "mainClass": "chapter9.New.StudentApplication",
             "projectName": "java_in_class_fa9d375a"
         }
     ]
