Update StudentApplication class; set window to non-resizable and adjust project list formatting for improved UI.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,13 @@
             "name": "StudentApplication",
             "request": "launch",
             "mainClass": "chapter9.New.StudentApplication",
+            "projectName": "java_in_class_63e39e38"
+        },
+        {
+            "type": "java",
+            "name": "StudentApplication",
+            "request": "launch",
+            "mainClass": "chapter9.New.StudentApplication",
             "projectName": "java_in_class_fa9d375a"
         }
     ]
